# Negotio

./: CMakeLists.txt  README.md
configs/: config.json
include/: common.h  json_support.h
src/: NegotioApplication.cpp  main.cpp
src/hash/: hash.cpp  hash.h
src/monitor/: monitor.cpp  monitor.h
src/negotiate/: negotiate.cpp  negotiate.h
src/policy/: policy.cpp  policy.h
src/udp/: udp.cpp  udp.h
src/unixsocket/: unixsocket.cpp  unixsocket.h
tests/: performance_test.cpp  unit_test.cpp
tests/unit_test/: hash_test.cpp  monitor_test.cpp  negotiate_test.cpp  policy_test.cpp  udp_test.cpp  unixsocket_test.cpp
tests/utils/: test_util.h
